--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,20 +14,22 @@
 
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/motivation' | prepend: site.baseurl }}">Motivation</a>
-      
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/guide' | prepend: site.baseurl }}">Stakeholder Guide</a>
       <!-- An example of a section with drop-down menu -->
-      <button class="dropdown-btn">Methods
+      <button class="dropdown-btn">Case Studies
           <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-          <a href="{{ '/method1' | prepend: site.baseurl }}">Method 1</a><br/>
-          <a href="{{ '/method2' | prepend: site.baseurl }}">Method 2</a>
+          <a href="{{ '/casestudies' | prepend: site.baseurl }}">Overview</a><br/>
+          <a href="{{ '/georgia' | prepend: site.baseurl }}">Georgia</a><br/>
+          <a href="{{ '/colorado' | prepend: site.baseurl }}">Colorado</a>
+          <a href="{{ '/texas' | prepend: site.baseurl }}">Texas</a>
       </div>
       
-      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/results' | prepend: site.baseurl }}">Results</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/about' | prepend: site.baseurl }}">About</a>
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/glossary' | prepend: site.baseurl }}">Glossary</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/references' | prepend: site.baseurl }}">References</a>
-
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ 'https://github.com/uwescience/dssg2021-redistricting' | prepend: site.baseurl }}">Github</a>
       <script>
 /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
 var dropdown = document.getElementsByClassName("dropdown-btn");
