--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,6 @@
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/about' | prepend: site.baseurl }}">About</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/glossary' | prepend: site.baseurl }}">Glossary</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/references' | prepend: site.baseurl }}">References</a>
-      <a class="sidebar-nav-item" href="'https://github.com/uwescience/dssg2021-redistricting'">Github</a>
       <script>
 /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
 var dropdown = document.getElementsByClassName("dropdown-btn");
@@ -64,7 +63,7 @@ for (i = 0; i < dropdown.length; i++) {
       {% endfor %}
       {% endcomment %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
+      <a class="sidebar-nav-item" href="https://github.com/uwescience/dssg2021-redistricting">GitHub</a>
       <span class="sidebar-nav-item">v{{ site.version }}</span>
     </nav>
 
