--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,7 @@
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/motivation' | prepend: site.baseurl }}">Motivation</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/guide' | prepend: site.baseurl }}">Stakeholder Guide</a>
+      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/gerrychain' | prepend: site.baseurl }}">GerryChain</a>
       <!-- An example of a section with drop-down menu -->
       <button class="dropdown-btn">Case Studies
           <i class="fa fa-caret-down"></i>
@@ -27,7 +28,6 @@
       </div>
       
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/glossary' | prepend: site.baseurl }}">Glossary</a>
-      <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/references' | prepend: site.baseurl }}">References</a>
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/about' | prepend: site.baseurl }}">About</a>
       <script>
 /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
